# haskell-course

./: 01hie.md  01hie.txt  README.md
c0/: netserver.hs
c03/app/: Main.hs
c05/: netserver-cabal-choc.cabal  netserverCatchBracket.hs
c05/fibo/: fibo.hs  fibo1.hs
c05/netserver/: netserver-cabal-choco.cabal  netserverBracketBracket.hs  netserverOnErrorBracket.hs  netserverTryBracket.hs
