cabal-version:       2.4
name:                netserver-cabal-choco
version:             0.1.0.0

executable server
--   main-is:             netserver.hs
--   main-is:             netserverBracketBracket.hs
--   main-is:             netserverOnErrorBracket.hs
--   main-is:             netserverTryBracket.hs
  main-is:             netserverCatchBracket.hs
  
  build-depends:       base, network ^>=2.8.0
  default-language:    Haskell2010
